# AstroControlPanel

./: .gitignore  CMakeLists.txt  package.xml  plugin_description.xml
include/astro_control_panel/: astro_control_panel.hpp  command_section.hpp  dummy_node.hpp  info_section.hpp  localization_section.hpp  localization_widget.hpp  mapping_widget.hpp  navigation_widget.hpp  teleop_section.hpp  visibility_control.hpp
src/: astro_control_panel.cpp  command_section.cpp  info_section.cpp  localization_section.cpp  localization_widget.cpp  mapping_widget.cpp  navigation_widget.cpp  teleop_section.cpp
